Fix Send button position on mobile.

--- a/scss/partials/_add_comment.scss
+++ b/scss/partials/_add_comment.scss
@@ -129,13 +129,12 @@ div.add-comment-box-container {
     button.send-btn {
       float: right;
       height: 24px;
-      padding: 0;
       margin: 0;
       text-align: right;
       color: $carrot_green;
       @include OC_Body_Bold();
       font-size: 16px;
-      padding: 0 0 0 8px;
+      padding: 0;
 
       @include mobile() {
         right: 10px;
